--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Total Money Makeover Quiz</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,6 @@
             Score: <span id="score">0</span>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="logic.js"></script>
 </body>
 </html>
