--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/euz0vgw.css">
     <meta name="theme-color" content="#1cc8b4">
-
-    
 </head>
 <body>
-    <div class="heading" id="heading">
+    <div id="welcome-screen">
+        <img class="logo" src="./images/smhh-trivia-logo.png" alt="Smart Money Happy Hour Trivia">
+        <button id="start-button">Play Now</button>
+    </div>
+    <div class="heading" id="heading" style="display: none;">
         <img class="logo" src="./images/smhh-trivia-logo.png" alt="Smart Money Happy Hour Trivia">
         <div id="score-container">
             <span class="score">
@@ -19,18 +21,19 @@
             </span>
         </div>
     </div>
-    <div class="container">
-
-        <!-- <span id="progress-text">0/10</span> -->
+    <div class="container" id="game-container" style="display: none;">
         <progress id="progress-bar" value="0" max="10"></progress>
-   
         <div id="question-container">
             <h3 id="question-text"></h3>
             <div id="choices-container"></div>
             <div id="result"></div>
             <button class="next" id="next-button" disabled>Next Question</button>
         </div>
-        <div id="final-result-container" style="display: none;"></div>
+        <div id="final-result-container" style="display: none;">
+            <h2>Thanks for Playing!</h2>
+            <p>Your final score is <span id="final-score"></span> out of 10.</p>
+            <button id="restart-button">Restart Game</button>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <script src="questions.js"></script>
