--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="final-result-container" style="display: none;">
             <h2>Thanks for Playing!</h2>
             <p>Your final score is <span id="final-score"></span> out of 10.</p>
-            <button id="restart-button">Restart Game</button>
+            <button id="restart-button">Play Again</button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
