--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="logo" src="./images/smhh-trivia-logo.png" alt="Smart Money Happy Hour Trivia">
         <button id="start-button">Play Now</button>
     </div>
-    <div class="heading" id="heading" style="display: none;">
+    <div class="heading hidden" id="heading">
         <img class="logo" src="./images/smhh-trivia-logo.png" alt="Smart Money Happy Hour Trivia">
         <div id="score-container">
             <span class="score">
@@ -21,7 +21,7 @@
             </span>
         </div>
     </div>
-    <div class="container" id="game-container" style="display: none;">
+    <div class="container hidden" id="game-container">
         <progress id="progress-bar" value="0" max="10"></progress>
         <div id="question-container">
             <h3 id="question-text"></h3>
@@ -29,7 +29,7 @@
             <div id="result"></div>
             <button class="next" id="next-button" disabled>Next Question</button>
         </div>
-        <div id="final-result-container" style="display: none;">
+        <div id="final-result-container" class="hidden">
             <h2>Thanks for Playing!</h2>
             <p>Your final score is <span id="final-score"></span> out of 10.</p>
             <button id="restart-button">Play Again</button>
